# pytorch-nicp-face-align

./: .gitignore  bfm_model.py  create_data.md  create_lm.py  create_tex_map.py  data_creater.py  env_install.sh  head_transfer.py  landmark.py  utils.py  vis_lm_in_blender.py
config/: fine_grain.json
obj_process/: CMakeLists.txt  merge_material.cpp
